--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,24 +1,25 @@
 <% content_for :title, "Editing book" %>
 
-<h1 class="font-bold text-4xl mbe-4">Editing book</h1>
+<div class="max-w-2xl mx-auto p-6 bg-white shadow rounded-lg">
+  <h1 class="text-3xl font-bold mb-6 text-center">Edit Book</h1>
 
-<%= render "form", book: @book %>
+  <%= render "form", book: @book %>
 
-<div class="inline-flex flex-wrap items-center gap mbs-2" style="--row-gap: .5rem">
-  <%= link_to "Show this book", @book, class: "btn" %>
-  <%= link_to "Back to books", books_path, class: "btn" %>
-</div>
+  <div class="flex flex-wrap justify-center gap-4 mt-6">
+    <%= link_to "Show this book", @book, class: "px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition" %>
+    <%= link_to "Back to Books", books_path, class: "px-4 py-2 bg-gray-300 text-gray-800 rounded hover:bg-gray-400 transition" %>
+  </div>
 
-<%= form_with(model: @book, local: true) do |form| %>
   <% if @book.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
-      <ul>
+    <div class="mt-6 p-4 bg-red-100 text-red-800 border border-red-300 rounded">
+      <h2 class="font-semibold mb-2">
+        <%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:
+      </h2>
+      <ul class="list-disc list-inside">
         <% @book.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
     </div>
-  <% end %>  
-  </div>
-<% end %>
+  <% end %>
+</div>
