--- a/app/views/musics/_form.html.erb
+++ b/app/views/musics/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_with(model: @music, local: true, html: { multipart: true }) do |form| %>
   <% if @music.errors.any? %>
     <div class="alert alert--negative flex flex-col gap-half mbe-4" role="alert">
-      <h2 class="font-medium leading-none"><%= pluralize(music.errors.count, "error") %> prohibited this song from being saved:</h2>
+      <h2 class="font-medium leading-none"><%= pluralize(@music.errors.count, "error") %> prohibited this song from being saved:</h2>
 
       <ul class="text-sm mis-3" style="list-style: disc">
-        <% music.errors.each do |error| %>
+        <% @music.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
@@ -37,23 +37,24 @@
   </div>
 
   <div class="flex flex-col items-start gap-half mbe-4">
-  <%= form.label :rating, class: "text-sm font-medium leading-none" %>
-  <%= form.number_field :rating, class: "input" %>
-</div>
+    <%= form.label :rating, class: "text-sm font-medium leading-none" %>
+    <%= form.number_field :rating, class: "input" %>
+  </div>
 
-  <!-- Description -->
   <div class="flex flex-col items-start gap-half mbe-4">
     <%= form.label :description, class: "text-sm font-medium leading-none" %>
     <%= form.text_area :description, class: "input" %>
   </div>
 
   <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.hidden_field :image_url, id: "music_image_url" %>
-    <div id="spotify-image-container">
+    <%= form.label :poster, "Poster", class: "font-semibold text-sm text-gray-700" %>
+    <%= form.file_field :poster, direct_upload: true, class: "mt-1" %>
+    <div id="spotify-image-container" class="w-48 h-72 mt-2">
     </div>
   </div>
 
   <div class="inline-flex items-center mbs-2 mie-1">
-    <%= form.submit "Done", class: "btn" %>
+    <%= form.submit "Done", class: "btn btn--primary" %>
+  </div>
 
 <% end %>
